--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,14 @@ html, body {
   background-color: #2b2b2b;
 }
 
+.flashcard-app-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
 body {
   display: flex;
   flex-direction: column;
