--- a/src/App.css
+++ b/src/App.css
@@ -28,4 +28,21 @@ body {
   color: white;
   
 }
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  flex-direction: column;
+  align-items: center;
+}
 
+.app {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  text-align: center;
+}
